# aws-python

./: pyproject.toml
.idx/: airules.md  dev.nix
catch-up/: README.md  auth.py  inspire.py  main.py  pyproject.toml
catch-up/bucket/: crud.py  encryption.py  policy.py
catch-up/object/: crud.py  policy.py
catch-up/static-react/: index.html  package-lock.json  package.json
catch-up/static-react/src/: App.jsx  index.css
task1/: main.py  task2.py  task3.py
